# world-development-indicators

./: main.py  pyproject.toml  source.json
.github/workflows/: run.yml
assets/countries/: countries.py  schema.json
assets/indicators/: indicators.py  schema.json
assets/world_development_indicators/: schema.json  world_development_indicators.py
