[project]
name = "world-development-indicators"
version = "0.1.0"
description = "World Bank World Development Indicators data connector"
authors = [{name = "Data Integration Team", email = "data@integration.io"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27.0",
    "ratelimit>=2.2.1",
    "tenacity>=8.2.3",
    "pyarrow>=15.0.0",
    "boto3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"